# solana-merkle-tree

./: .gitignore  README.md
client/: Cargo.toml
client/src/: main.rs
program/: Cargo.toml
program-incremental/src/: default_nodes.rs  lib.rs  processor.rs  state.rs
program-spl/: Cargo.toml
program-spl/src/: lib.rs  processor.rs
program/src/: lib.rs  processor.rs  state.rs
