[package]
name = "basic-merkle-tree"
edition = "2021"

[dependencies]
anchor-lang = "0.29"
borsh = "1"
bytemuck = "1"
solana-program = "=1.18.26"
spl-account-compression = { version = "0.4", features = ["cpi"] }

[dev-dependencies]
solana-program-test = "=1.18.26"
solana-sdk = "=1.18.26"
tokio = "1"

[lib]
crate-type = ["cdylib", "lib"]

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/lincot/curve25519-dalek", branch = "unpin-zeroize" }
